    * mongoc_database_write_command_with_opts
    * mongoc_database_read_write_command_with_opts
    * mongoc_collection_read_command_with_opts
    * mongoc_collection_write_command_with_opts
    * mongoc_collection_read_write_command_with_opts
  * New helper function to include read concern in one of the above function's
    options parameter: mongoc_read_concern_append.
  * mongoc_client_command no longer applies the client's read preference and
    read concern by default. Same change for mongoc_database_command and
    mongoc_collection_command.
  * mongoc_collection_count_with_opts now applies the collection's read
    preference if no read preference is provided
  * mongoc_collection_create_index and mongoc_collection_drop_index now apply
    the collection's write concern.
  * mongoc_collection_create_index_with_opts now applies the collection's
    write concern if none is specified in "opts"
  * connectTimeoutMS timer now begins after DNS resolution, and resets
    for each interface attempted (e.g., if the driver first tries IPv6,
    then IPv4).
  * New error code MONGOC_ERROR_DUPLICATE_KEY.
  * mongoc_collection_find no longer treats the "filter" key specially in
    queries - querying for a document with a key named "filter" is the same
    now as any other key.
  * The server description parameter to the following functions is "const":
    * mongoc_server_description_host
    * mongoc_server_description_id
    * mongoc_server_description_ismaster
    * mongoc_server_description_round_trip_time
    * mongoc_server_description_type
  * Exported symbols are no longer declared in seperate export files.
    This could break ABI with applications using clang, which previously
    exported symbols from the internal private ABI.
  * mongoc no longer crashes when multi roundtrip bulk operation fails.
  * Added support for the new readConcernLevel "linearizable".
  * Clients now check for misformatted "readPreferenceTags" in URI.